[gd_scene load_steps=14 format=2]

[ext_resource path="res://Guns/Gun Scenes/pistol.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Enemy Scripts/pistolScientist.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Enemy Scripts/Enemy Stat Sheets/basicEnemyStats.tres" type="Resource" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.33

[sub_resource type="CapsuleMesh" id=2]
radius = 0.33

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.960784, 0.196078, 0.176471, 1 )

[sub_resource type="CylinderShape" id=4]
radius = 20.0
height = 14.0

[sub_resource type="CylinderShape" id=5]
radius = 5.0
height = 14.0

[sub_resource type="CylinderShape" id=6]
radius = 14.0
height = 6.0

[sub_resource type="Animation" id=7]
resource_name = "Active"

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 0.5 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]

[node name="pistolScientist" type="KinematicBody" groups=[
"Can_Be_Shot",
"Enemy",
]]
script = ExtResource( 2 )
stats = ExtResource( 3 )
detect_area_path = NodePath("DetectionArea")
attack_area_path = NodePath("AttackArea")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Hand" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.173556, 0.351903, -0.392615 )

[node name="Pistol" parent="Hand" instance=ExtResource( 1 )]
raycast_path = NodePath("../../RayCast")

[node name="DetectionArea" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
shape = SubResource( 4 )

[node name="CowerArea" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="CowerArea"]
shape = SubResource( 5 )

[node name="AttackArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
shape = SubResource( 6 )

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 7 )
anims/Cower = SubResource( 8 )
anims/Death = SubResource( 9 )
anims/Idle = SubResource( 10 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -10 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="CowerArea" to="." method="_on_CowerArea_body_entered"]
[connection signal="body_exited" from="CowerArea" to="." method="_on_CowerArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
